Home page width fix + Login/Signup dark mode

--- a/client/src/pages/Login/logIn.module.css
+++ b/client/src/pages/Login/logIn.module.css
@@ -1,7 +1,7 @@
 .login-container {
   background-color: #f5f5f5;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   flex-direction: column;
   height: 100vh;
